--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,8 +1,7 @@
 [uwsgi]
-
 # 必须全部为绝对路径
 # 项目的路径
-chdir           = /www/oaback
+chdir           = /www
 # Django的wsgi文件
 module          = django_vue.wsgi
 
@@ -12,14 +11,12 @@ master          = true
 # 最大数量的工作进程
 processes       = 20
 threads         = 25
-
+# IP端口
 http            = :8000
-
-# 這裡socket是為了跟nginx進行通信
-socket          = /data/oa.sock
+# socket文件地址
+socket          = /data/sock/oa.sock
 # 设置socket的权限
 chmod-socket    = 666
+
 # 退出的时候是否清理环境
 vacuum          = true
-
-daemonize       = /data/log/uwsgi.log
