--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,22 +1,22 @@
 [uwsgi]
-# 必须全部为绝对路径
-# 项目的路径
+# 必須全部為絕對路徑
+# 專案的路徑
 chdir           = /www
-# Django的wsgi文件
+# Django 的 wsgi 檔案
 module          = django_vue.wsgi
 
-# 进程相关的设置
-# 主进程
+# 程序相關的設定
+# 主程序
 master          = true
-# 最大数量的工作进程
+# 最大數量的工作程序
 processes       = 20
 threads         = 25
-# IP端口
+# IP 埠口
 http            = :8000
-# socket文件地址
+# socket 檔案位址
 socket          = /data/sock/oa.sock
-# 设置socket的权限
+# 設定 socket 的權限
 chmod-socket    = 666
 
-# 退出的时候是否清理环境
+# 結束時是否清理環境
 vacuum          = true
